add submodule 'constraints' (hdl/constraints)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "neorv32"]
 	path = neorv32
 	url = https://github.com/stnolting/neorv32
+[submodule "constraints"]
+	path = constraints
+	url = https://github.com/hdl/constraints
