--- a/osflow/Makefile
+++ b/osflow/Makefile
@@ -66,7 +66,7 @@ OrangeCrab:
 	  NEORV32_MEM_SRC="$(NEORV32_MEM_SRC)" \
 	  run
 
-AlhambraII:
+IceZumAlhambraII:
 	$(eval BITSTREAM ?= neorv32_$(BOARD)_$(DESIGN).bit)
 	$(eval NEORV32_MEM_SRC ?= $(RTL_CORE_SRC)/mem/neorv32_imem.default.vhd $(RTL_CORE_SRC)/mem/neorv32_dmem.default.vhd)
 	$(MAKE) \
