--- a/quartus/de0-nano-test-setup-avalonmm-wrapper/de0-nano-test-setup.qsf
+++ b/quartus/de0-nano-test-setup-avalonmm-wrapper/de0-nano-test-setup.qsf
@@ -47,46 +47,46 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_application_image.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_bootloader_image.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_boot_rom.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_busswitch.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_bus_keeper.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cfs.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_alu.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_bus.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_control.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_cp_bitmanip.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_cp_fpu.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_cp_muldiv.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_cp_shifter.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_decompressor.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_cpu_regfile.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_debug_dm.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_debug_dtm.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_fifo.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_gpio.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_icache.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_mtime.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_neoled.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_package.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_pwm.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_slink.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_spi.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_sysinfo.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_top.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_trng.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_twi.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_uart.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_wdt.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_wishbone.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_xirq.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/system_integration/neorv32_SystemTop_AvalonMM.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_dmem.entity.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/neorv32_imem.entity.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/mem/neorv32_dmem.default.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../../rtl/core/mem/neorv32_imem.default.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_application_image.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_bootloader_image.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_boot_rom.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_busswitch.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_bus_keeper.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cfs.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_alu.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_bus.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_control.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_cp_bitmanip.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_cp_fpu.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_cp_muldiv.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_cp_shifter.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_decompressor.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_cpu_regfile.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_debug_dm.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_debug_dtm.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_fifo.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_gpio.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_icache.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_mtime.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_neoled.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_package.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_pwm.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_slink.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_spi.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_sysinfo.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_top.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_trng.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_twi.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_uart.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_wdt.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_wishbone.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_xirq.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/system_integration/neorv32_SystemTop_AvalonMM.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_dmem.entity.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_imem.entity.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/mem/neorv32_dmem.default.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/mem/neorv32_imem.default.vhd -library neorv32
 set_global_assignment -name VHDL_FILE neorv32_test_setup_avalonmm.vhd
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
