--- a/.github/workflows/Containers.yml
+++ b/.github/workflows/Containers.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         registry: ghcr.io
         username: gha
-        password: ${{ github.token }}
+        password: ${{ secrets.PACKAGE_TOKEN }}
 
     - name: '🛰️ Push image to ghcr.io'
       run: docker push ghcr.io/stnolting/neorv32/${{ matrix.image }}
