Renamed Board NexysA7, removed the need to setup Environment

--- a/osflow/Makefile
+++ b/osflow/Makefile
@@ -94,7 +94,7 @@ iCEBreaker:
 	  NEORV32_MEM_SRC="$(NEORV32_MEM_SRC)" \
 	  run
 
-nexys_a7:
+NexysA7:
 	$(eval BITSTREAM ?= neorv32_$(BOARD)_$(DESIGN).bit)
 	$(eval NEORV32_MEM_SRC ?= $(RTL_CORE_SRC)/mem/neorv32_imem.default.vhd $(RTL_CORE_SRC)/mem/neorv32_dmem.default.vhd)
 	$(MAKE) \
