--- a/quartus/de0-nano-test-setup-avalonmm-wrapper/de0-nano-test-setup.qsf
+++ b/quartus/de0-nano-test-setup-avalonmm-wrapper/de0-nano-test-setup.qsf
@@ -82,7 +82,7 @@ set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_uart.vhd 
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_wdt.vhd -library neorv32
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_wishbone.vhd -library neorv32
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_xirq.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/system_integration/neorv32_SystemTop_AvalonMM.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../neorv32_SystemTop_AvalonMM.vhd -library neorv32
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_dmem.entity.vhd -library neorv32
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_imem.entity.vhd -library neorv32
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/mem/neorv32_dmem.default.vhd -library neorv32
