--- a/cologne_chip/.gitignore
+++ b/cologne_chip/.gitignore
@@ -1,15 +1,12 @@
 *.log
-*.synth.v
-*.id
-*.idh
+*.v
+*.id*
 *.net
-*.net
-*.refcomp
+*.ref*
 *.pos
-*.refparam
-*.refwire
 *.pin
 *.cdf
+*.cfg
 *.prn
 *.txt
 *.pathes
