--- a/quartus/de0-nano-test-setup-avalonmm-wrapper/de0-nano-test-setup.qsf
+++ b/quartus/de0-nano-test-setup-avalonmm-wrapper/de0-nano-test-setup.qsf
@@ -83,10 +83,8 @@ set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_wdt.vhd -
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_wishbone.vhd -library neorv32
 set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_xirq.vhd -library neorv32
 set_global_assignment -name VHDL_FILE ./../neorv32_SystemTop_AvalonMM.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_dmem.entity.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_imem.entity.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/mem/neorv32_dmem.default.vhd -library neorv32
-set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/mem/neorv32_imem.default.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_dmem.vhd -library neorv32
+set_global_assignment -name VHDL_FILE ./../../NEORV32/rtl/core/neorv32_imem.vhd -library neorv32
 set_global_assignment -name VHDL_FILE neorv32_test_setup_avalonmm.vhd
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
