--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,14 @@
 version: 2
 updates:
-- package-ecosystem: gitsubmodule
-  directory: /
-  commit-message:
-    prefix: '[Dependabot]'
-  schedule:
-    interval: weekly
-    time: '04:00'
-  open-pull-requests-limit: 99
+  - package-ecosystem: gitsubmodule
+    directory: /
+    commit-message:
+      prefix: '[Dependabot]'
+    schedule:
+      interval: weekly
+      time: '04:00'
+    open-pull-requests-limit: 99
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: weekly
