Add extended demo setup for Tang Nano boards
- Extended microcontroller instruction set
- Connects on-board SPI flash
- Makes use of the WS2812 LED

--- a/osflow/Makefile
+++ b/osflow/Makefile
@@ -152,6 +152,14 @@ MixedLanguage:
 	  NEORV32_VERILOG_SRC="$(NEORV32_VERILOG_SRC)" \
 	  $(BOARD)
 
+TangNanoDemo:
+	$(eval DESIGN ?= $@)
+	$(eval DESIGN_SRC ?= $(TEMPLATES)/neorv32_ProcessorTop_TangNanoDemo.vhd)
+	$(MAKE) \
+	  DESIGN="$(DESIGN)" \
+	  DESIGN_SRC="$(DESIGN_SRC)" \
+	  $(BOARD)
+
 # Help
 
 help:
